--- a/app1/templates/classes.html
+++ b/app1/templates/classes.html
@@ -6,6 +6,65 @@
     <h4 class="mb-3" style="font-family: 'Ubuntu', sans-serif;color: orange; letter-spacing: 3px;">CrossFit</h4>
 </div>
 
+<div class="row mt-1 p-5">
+    <div class="col-lg-12">
+        <div class="card-group">
+            <div class="card fadeimg">
+              <img src="{% static 'images/weightlift.jpg' %}" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" style="color: orange;">STRENGTH</h5>
+                <h3 class="card-title">WEIGHTLIFTING</h3>
+                
+              </div>
+            </div>
+            <div class="card fadeimg">
+              <img src="{% static 'images/indoorcycle.jpg' %}" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title" style="color: orange;">CARDIO</h5>
+                <h3 class="card-title">INDOOR CYCLING</h3>
+              </div>
+            </div>
+            <div class="card fadeimg">
+              <img src="{% static 'images/kettle.jpg' %}" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" style="color: orange;">STRENGTH</h5>
+                <h3 class="card-title">KETTLEBALL POWER</h3>
+              </div>
+            </div>
+          </div>
+    </div>
+    <div class="col-lg-12">
+        <div class="card-group">
+            <div class="card fadeimg">
+              <img src="{% static 'images/yoga.jpg' %}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title" style="color: orange;">FITNESS</h5>
+                    <h3 class="card-title">YOGA</h3>
+                </div>
+            </div>
+            <div class="card fadeimg">
+              <img src="{% static 'images/boxing.jpg' %}" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title" style="color: orange;">TRAINING</h5>
+                    <h3 class="card-title">BOXING</h3>
+                </div>
+            </div>
+        </div>
+     </div>
+ </div>      
 
+ <div class="row text-center mt-5">
+    <div class="col-lg-12">
+           <div class="jumbotron text-white jumbotron-image shadow" style="background-image: url(https://image.freepik.com/free-photo/stronger-young-muscular-caucasian-athlete-practicing-lunges-gym-with-barbell-male-model-doing-strength-exercises-training-his-lower-body-wellness-healthy-lifestyle-bodybuilding-concept_155003-36806.jpg);background-repeat: no-repeat;background-size: cover ;">
+             <h2 class="mb-4 display-3" style="font-weight: bolder;letter-spacing: 3px;font-family: 'Ubuntu', sans-serif;color: orange;">
+               GET STARTED TODAY
+             </h2>
+             <p class="mb-4" style="font-size: large;font-family: 'Ubuntu', sans-serif;color: orange; letter-spacing: 3px;">
+               WHERE HEALTH, BEAUTY AND FITNESS MEET
+             </p>
+             <a href="/register/"><button class="btn btn-outline-warning" style="font-family: 'Ubuntu', sans-serif; border-radius: 50px;letter-spacing: 2px;">ENROLL NOW</button></a>
+           </div>
+    </div>
+</div>
 
 {% endblock %}
