--- a/app1/templates/home.html
+++ b/app1/templates/home.html
@@ -4,7 +4,7 @@
 
 <!--banner slider -->
 <div class="row slider">
-    <div class="col-lg-12">
+    <div class="col-lg-12" style="padding: 0px;">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -52,7 +52,7 @@
 
 <div class="row mt-4 mx-auto text-center">
     <div class="col-lg-3" >
-        <div class="card text-white bg-warning mb-3 servicecard" style="max-width: 20rem;">
+        <div class="card text-white bg-warning mb-3 servicecard mx-auto" style="max-width: 20rem;">
             <div class="card-body mx-auto"> <img src="{% static 'images/treadmil.png' %}" alt="" width="50px" height="50px"> </div>
             <div class="card-body " style="color: black;">
               <h5 class="card-title">Modern Equipment</h5>
@@ -61,7 +61,7 @@
           </div>
     </div>
     <div class="col-lg-3">
-        <div class="card text-white bg-warning mb-3 servicecard" style="max-width: 20rem;">
+        <div class="card text-white bg-warning mb-3 servicecard mx-auto" style="max-width: 20rem;">
             <div class="card-body mx-auto"><img src="{% static 'images/nutrition.png' %}" alt="" width="50px" height="50px"></div>
             <div class="card-body" style="color: black;">
               <h5 class="card-title">Healthy Nutrion Plan</h5>
@@ -70,7 +70,7 @@
           </div>
     </div>
     <div class="col-lg-3">
-        <div class="card text-white bg-warning mb-3 servicecard" style="max-width: 20rem;">
+        <div class="card text-white bg-warning mb-3 servicecard mx-auto" style="max-width: 20rem;">
             <div class="card-body mx-auto"><img src="{% static 'images/dumbell.png' %}" alt="" width="50px" height="50px"></div>
             <div class="card-body" style="color: black;">
               <h5 class="card-title">Proffessional Training Plan</h5>
@@ -79,7 +79,7 @@
           </div>
     </div>
     <div class="col-lg-3">
-        <div class="card text-white bg-warning mb-3 servicecard" style="max-width: 20rem;">
+        <div class="card text-white bg-warning mb-3 servicecard mx-auto" style="max-width: 20rem;">
             <div class="card-body mx-auto"><img src="{% static 'images/heart-beat.png' %}" alt="" width="50px" height="50px"></div>
             <div class="card-body" style="color: black;">
               <h5 class="card-title">Unique To Your Needs</h5>
@@ -96,7 +96,7 @@
     </div>
 </div>
 
-<div class="row mt-1" style="padding: 50px 100px 100px 100px;">
+<div class="row mt-1 p-3">
     <div class="col-lg-12">
         <div class="card-group">
             <div class="card fadeimg">
