--- a/app1/static/css/style.css
+++ b/app1/static/css/style.css
@@ -95,4 +95,25 @@ footer{
     color: black;
 
 }
-
+.navigation{
+    height: 80px;
+    background-image: linear-gradient(20deg,orange,orange);
+}
+.pills{
+    background-color: orange;
+    /* width: 60%; */
+    height: 38px;
+    font-weight: 800;
+    border-radius: 30px;
+    padding-left: 20px;
+    padding-top: 8px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    justify-content: space-between;
+}
+.row{
+    margin: 0px;
+}
+.pillcontent{
+    /* width: 58%; */
+    height: auto;
+}
