--- a/app1/templates/masters.html
+++ b/app1/templates/masters.html
@@ -16,13 +16,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"></script>
     <script src="{% static 'js/script.js' %}"></script>
   </head>
   <body>
     <!-- header -->
-    <div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-12">
+    <div class="row marg">
+        <div class="col-lg-12" style="padding: 0px;">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#"><img style="height: 45px;width: 200px;" src="{% static 'images/logo1.png' %}" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,13 +41,7 @@
                       <a class="nav-link" href="/classes/">Classes</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Suppliments</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="/contact/">Contact Us</a>
                     </li>
                  </ul>
                 </div>
@@ -54,7 +49,6 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <button class="btn btn-outline-success" data-toggle="modal" data-target="#loginmodal">Login</button>
-                            <!-- <button class="btn btn-outline-danger" style="width: 80px;" data-toggle="modal" data-target="#registrationmodal">Join us</button> -->
                             <a class="btn btn-outline-danger" href="/register/" role="button">Join Now</a>
                         </li>
                     </ul>
@@ -64,19 +58,15 @@
       </div>
 <!-- header end -->
 
-<div class="row">
-  <div class="col-lg-12">
     {% block content %}
     {% endblock %}
-  </div>
-</div>
 
 
 
 
 <!-- Footer -->
       <div class="row" style=" font-family: 'Ubuntu', sans-serif;">
-        <div class="col-lg-12 font-weight-normal" >
+        <div class="col-lg-12 font-weight-normal" style="padding: 0px;">
           <footer class="text-center text-lg-start bg-light text-muted">
             <!-- Section: Social media -->
             <section
@@ -173,8 +163,11 @@
         </div>
       </div>
 <!-- Footer -->
-</div>
-
+<style>
+  .error{
+    color: red;
+  }
+</style>
 
 <!--login Modal -->
 <div class="modal fade" id="loginmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -186,20 +179,20 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="card-body p-5 text-center">
+        <div class="card-body p-5">
 
           <h3 class="mb-5">Sign in</h3>
+          <form action="" id="loginform">
+            <div class="form-outline mb-4">
+              <label class="form-label">Email</label>
+              <input type="email" name="email" class="form-control form-control-lg" />
+            </div>
 
-          <div class="form-outline mb-4">
-            <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
-            <label class="form-label" for="typeEmailX-2">Email</label>
-          </div>
-
-          <div class="form-outline mb-4">
-            <input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
-            <label class="form-label" for="typePasswordX-2">Password</label>
-          </div>
-
+            <div class="form-outline mb-4">
+              <label class="form-label" >Password</label>
+              <input type="password" name="password" class="form-control form-control-lg" />
+            </div>
+          
           <!-- Checkbox -->
           <div class="form-check d-flex justify-content-start mb-4">
             <input
@@ -211,8 +204,8 @@
             <label class="form-check-label" for="form1Example3"> Remember password </label>
           </div>
 
-          <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-
+          <button class="btn btn-primary btn-lg btn-block" type="submit" id="login">Login</button>
+         </form>
           <hr class="my-4">
 
           <button class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;" type="submit"><i class="fa fa-google me-2"></i> Sign in with google</button>
@@ -225,43 +218,35 @@
 </div>
 
 <!-- Button trigger modal -->
-
-<!-- registration Modal -->
-<!-- <div class="modal fade" id="registrationmodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header text-center">
-        <h4 class="modal-title w-100 font-weight-bold">Sign up</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body mx-3">
-        <div class="md-form mb-5">
-          <i class="fas fa-user prefix grey-text"></i>
-          <input type="text" id="orangeForm-name" class="form-control validate">
-          <label data-error="wrong" data-success="right" for="orangeForm-name">Your name</label>
-        </div>
-        <div class="md-form mb-5">
-          <i class="fas fa-envelope prefix grey-text"></i>
-          <input type="email" id="orangeForm-email" class="form-control validate">
-          <label data-error="wrong" data-success="right" for="orangeForm-email">Your email</label>
-        </div>
-
-        <div class="md-form mb-4">
-          <i class="fas fa-lock prefix grey-text"></i>
-          <input type="password" id="orangeForm-pass" class="form-control validate">
-          <label data-error="wrong" data-success="right" for="orangeForm-pass">Your password</label>
-        </div>
-
-      </div>
-      <div class="modal-footer d-flex justify-content-center">
-        <button class="btn btn-deep-orange">Sign up</button>
-      </div>
-    </div>
-  </div>
-</div> -->
+<script>
+    $('#loginform').validate({
+      rules:{
+        email:{
+          required: true,
+          email: true
+        },
+        password:{
+          required: true,
+          minlength:8,
+          maxlength:10,
+        }
+      },
+      messages: {
+        email:{
+          required: " *Please enter email address",
+          email: " *Please enter valid email address",
+        },
+        password:{
+          required: '*This field is required',
+          minlength: '*Password must be at least 8 characters long',
+          maxlength: '*Password should exceed not 10 characters',
+        },
+      },
+      submitHandler: function (form) {
+        form.submit();
+      }
+    });
+</script>
 
 
 
